Добавление переключаемых вкладок в контактах Мелкие изменения

--- a/bu.html
+++ b/bu.html
@@ -59,8 +59,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9 col-md-12">
-          <h2 class="text-uppercase">Покупка использованных картриджей</h2>
-          <p>Картриджи принимаются ТОЛЬКО по предварительному согласованию всех наименований по телефону <a href="tel:+74956496449">+7 (495) 649-64-49</a></p>
+          <h2>Покупка использованных картриджей</h2>
+          <p class="mb-4">Картриджи принимаются ТОЛЬКО по предварительному согласованию всех наименований по телефону <a href="tel:+74956496449">+7 (495) 649-64-49</a></p>
         </div>
         <div class="col-lg-9 col-md-12">
           <!-- Таблица HP -->
