--- a/condition.html
+++ b/condition.html
@@ -55,7 +55,7 @@
   <main>
     <div class="container">
       <div class="row">
-        <h2 class="text-uppercase mb-5">Установка кондиционеров</h2>
+        <h2 class="mb-4">Установка кондиционеров</h2>
         <div class="col-lg-9 col-sm-12">
           <div class="card mb-4">
             <h5 class="card-header">1. Стандартная установка (трасса до 5 метров)</h5>
@@ -160,7 +160,7 @@
             </div>
           </div>
 
-          <div class="card mb-4">
+          <div class="card mb-5">
             <h5 class="card-header text-bg-warning rini_warn">Внимание!</h5>
             <div class="card-body">
               <p class="card-text border-bottom mb-3 pb-3">К началу монтажа кондиционера Вам необходимо обеспечить:
