--- a/contact.html
+++ b/contact.html
@@ -60,62 +60,84 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-9 col-sm-12">
-        <h2>Контактная информация</h2>
-        <div>
-          <a href="contact.html" class="btn btn-primary my-1" role="button">Контакты</a>
-          <a href="contact.html" class="btn btn-primary my-1" role="button">Условия оплаты</a>
-          <a href="contact.html" class="btn btn-primary my-1" role="button">Условия доставки</a>
-        </div>
-        <p><strong>Адрес: </strong> г. Москва, Волгоградский проспект, дом 28. оф.234</p>
-        <p><strong>Телефоны: </strong> <a href="tel:+74956496449">+7 (495) 649-64-49</a> <a href="+79037290054">+7 (903) 729-00-54</a></p>
-        <p><strong>Электронная почта: </strong><a href="mailto:6496449@rini.ru">6496449@rini.ru</a></p>
-        <p>Парковка для клиентов бесплатная</p>
-        <p><strong>Как добраться: </strong>Метро Волгоградский проспект, последний вагон из центра, из первых стеклянных дверей направо, вверх по лестнице и прямо. С левой стороны первое кирпичное 4х этажное здание, на окнах написано — столовая. Центральный вход (крыльцо), на охране спросить ООО "Рини". Для входа в здание необходим документ удостоверяющий личность (паспорт или водительское удостоверение). Внутри здания прямо по длинному коридору, в конце повернуть налево, дойти до конца коридора, повернуть налево, вверх по лестнице на 2-ой этаж, офис 234</p>
-
-        <div class="accordion my-3" id="accordionExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                <strong>Посмотреть на карте</strong>
-              </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/volgogradskiy_prospekt_28/Z04YcA9iSkIAQFtvfXtzdHtgYw==/?l=sat&ll=37.684434%2C55.726593&utm_medium=mapframe&utm_source=maps&z=16" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты — транспорт, навигация, поиск мест</a><iframe src="https://yandex.ru/map-widget/v1/?l=sat&ll=37.684434%2C55.726593&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjY5MTUzMBJL0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAsINCS0L7Qu9Cz0L7Qs9GA0LDQtNGB0LrQuNC5INC_0YDQvtGB0L_QtdC60YIsIDI4IgoNwboWQhUn515C&z=16" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+        <h2 class="mb-4">Контактная информация</h2>
+        <div class="card mb-5">
+          <div class="card-body">
+            <nav>
+              <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
+                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Контакты</button>
+                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Условия оплаты</button>
+                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Условия доставки</button>
               </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="accordion mb-5" id="accordionExample-2">
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                <strong>Схема</strong>
-              </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample-2">
-              <div class="accordion-body">
-                <strong>От метро пешком</strong>
-                <p><img src="img/shema-1.jpg" alt="Схема-1"></p>
-                <p><img src="img/shema-2.jpg" alt="Схема-2"></p>
-                <strong>Из центра на автомашине</strong>
-                <p><img src="img/shema-3.jpg" alt="Схема-3"></p>
-                <strong>Из области на автомашине</strong>
-                <p><img src="img/shema-4.jpg" alt="Схема-4"></p>
-                <p><strong>ICQ:</strong>6496449</p>
-                <p><strong>Режим работы:</strong></p>
-                <p>В рабочие дни ПнПт с 10-00 до 19-00 без обеда</p>
-                <p>В выходные и праздничные дни с 12-00 до 16-00</p>
-                <p><strong>Реквизиты:</strong></p>
-                <p>ООО «РИНИ»</p>
-                <p><strong>Юридический адрес:</strong>109316, г. Москва, Волгоградский проспект, д.28, стр.1</p>
-                <p>ИНН/КПП 7722720473/772201001</p>
-                <p>ОГРН 1107746496813</p>
-                <p>Р/с 40702810400000080846</p>
-                <p>К/с 30101810145250000411</p>
-                <p>Бик 044525411</p>
-                <p>Банк ФИЛИАЛ "ЦЕНТРАЛЬНЫЙ" БАНКА ВТБ (ПАО) г. Москва</p>
+            </nav>
+            <div class="tab-content" id="nav-tabContent">
+              <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0"><p><strong>Адрес: </strong> г. Москва, Волгоградский проспект, дом 28. оф.234</p>
+                <p><strong>Телефоны: </strong> <a href="tel:+74956496449">+7 (495) 649-64-49</a> <a href="+79037290054">+7 (903) 729-00-54</a></p>
+                <p><strong>Электронная почта: </strong><a href="mailto:6496449@rini.ru">6496449@rini.ru</a></p>
+                <p>Парковка для клиентов бесплатная</p>
+                <p><strong>Как добраться: </strong>Метро Волгоградский проспект, последний вагон из центра, из первых стеклянных дверей направо, вверх по лестнице и прямо. С левой стороны первое кирпичное 4х этажное здание, на окнах написано — столовая. Центральный вход (крыльцо), на охране спросить ООО "Рини". Для входа в здание необходим документ удостоверяющий личность (паспорт или водительское удостоверение). Внутри здания прямо по длинному коридору, в конце повернуть налево, дойти до конца коридора, повернуть налево, вверх по лестнице на 2-ой этаж, офис 234</p>
+          
+                <div class="accordion my-3" id="accordionExample">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        <strong>Посмотреть на карте</strong>
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/volgogradskiy_prospekt_28/Z04YcA9iSkIAQFtvfXtzdHtgYw==/?l=sat&ll=37.684434%2C55.726593&utm_medium=mapframe&utm_source=maps&z=16" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты — транспорт, навигация, поиск мест</a><iframe src="https://yandex.ru/map-widget/v1/?l=sat&ll=37.684434%2C55.726593&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjY5MTUzMBJL0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAsINCS0L7Qu9Cz0L7Qs9GA0LDQtNGB0LrQuNC5INC_0YDQvtGB0L_QtdC60YIsIDI4IgoNwboWQhUn515C&z=16" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+          
+                <div class="accordion mb-5" id="accordionExample-2">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>Схема</strong>
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample-2">
+                      <div class="accordion-body">
+                        <strong>От метро пешком</strong>
+                        <p><img src="img/shema-1.jpg" alt="Схема-1"></p>
+                        <p><img src="img/shema-2.jpg" alt="Схема-2"></p>
+                        <strong>Из центра на автомашине</strong>
+                        <p><img src="img/shema-3.jpg" alt="Схема-3"></p>
+                        <strong>Из области на автомашине</strong>
+                        <p><img src="img/shema-4.jpg" alt="Схема-4"></p>
+                        <p><strong>ICQ:</strong>6496449</p>
+                        <p><strong>Режим работы:</strong></p>
+                        <p>В рабочие дни ПнПт с 10-00 до 19-00 без обеда</p>
+                        <p>В выходные и праздничные дни с 12-00 до 16-00</p>
+                        <p><strong>Реквизиты:</strong></p>
+                        <p>ООО «РИНИ»</p>
+                        <p><strong>Юридический адрес:</strong>109316, г. Москва, Волгоградский проспект, д.28, стр.1</p>
+                        <p>ИНН/КПП 7722720473/772201001</p>
+                        <p>ОГРН 1107746496813</p>
+                        <p>Р/с 40702810400000080846</p>
+                        <p>К/с 30101810145250000411</p>
+                        <p>Бик 044525411</p>
+                        <p>Банк ФИЛИАЛ "ЦЕНТРАЛЬНЫЙ" БАНКА ВТБ (ПАО) г. Москва</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+                <p><strong>Наличный расчет.</strong>Для физических и юридических лиц, желающих приобрести товар за наличные деньги  Вы можете оплатить заказ нашему курьеру при его получении или при самовывозе в нашем офисе. Доставка осуществляется в день заказа или на следующий день.</p>
+                <p><strong>Оплата банковскими картами.</strong>Для физических лиц возможна оплата в офисе банковскими картами VISA, MasterCard, МИР</p>
+                <p><strong>Безналичный расчет.</strong>Для юридических лиц, желающих оплатить товар безналичным переводом  после оформления заказа будет сформирован счет на оплату и отправлен Вам по факсу или электронной почте. Вместе с заказом при получении будут переданы все необходимые для бухгалтерии документы (оригинал счета на оплату, товарная накладная (акт — для услуг) и счетфактура). Доставка осуществляется в течении 3х рабочих дней после поступления денег на расчетный счет.</p>
+              </div>
+              <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
+                <p>Доставка по Москве в пределах МКАД расходных материалов от 1000 руб. (за исключением картриджей с Офисной Гарантией (ОГ)) в рабочие дни с понедельника по пятницу с 10-00 до 19-00 БЕСПЛАТНО.</p>
+                <p>В выходные и праздничные дни с 13-00 до 17-00 — 350 руб. (за исключением картриджей ОГ).</p>
+                <p>Доставка по Москве в пределах МКАД оргтехники и бумаги в рабочие дни с  понедельника по пятницу с 10-00 до 19-00 — 500 руб.</p>
+                <p>Доставка за МКАД платная 100 руб. за 1 км.</p>
+                <p>Доставка по России осуществляется только по полной предоплате, наложенным платежом  отправка не производится. Если доставка осуществляется Почтой России, в счет  включаются почтовые расходы и стоимость доставки. Доставка до транспортной компании  — по выше перечисленным условиям.</p>
+                <p>Самовывоз производится только по адресу г. Москва, Волгоградский проспект, дом 28.  При самовывозе со склада действуют скидки на расходные материалы: на совместимую  продукцию 15%, на оригинальную продукцию 5%.</p>
               </div>
             </div>
           </div>
