--- a/repair.html
+++ b/repair.html
@@ -54,9 +54,9 @@
   </header>
   <main>
     <div class="container">
-      <div class="row">
+      <div class="row mb-5">
         <div class="col-lg-9 col-sm-12">
-          <h2 class="text-uppercase mb-3">Ремонт Оргтехники</h2>
+          <h2 class="mb-3">Ремонт Оргтехники</h2>
           <a href="proshivka.html" class="btn btn-primary mb-4" role="Button">Прошивка оргтехники</a>
           <div class="card mb-4">
             <h5 class="card-header">Услуги</h5>
