"Резервная копия перед изменением формы поиска"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="contact.html">Контакты</a>
           </li>
         </ul>
-        <form class="d-flex me-2" action="">
+        <form class="d-flex me-2 px-3" action="">
           <input class="form-control" type="search" placeholder="Поиск">
         </form>
         <button class="btn btn-outline-secondary rini-btn">Найти</button>
