Резерв пепед переносом на Wordpress

--- a/bu.html
+++ b/bu.html
@@ -64,7 +64,7 @@
         </div>
         <div class="col-lg-9 col-md-12">
           <!-- Таблица HP -->
-          <table class="table table-striped table-bordered rini_table mb-5">
+          <table class="table table-striped table-bordered rini_table_scroll mb-5">
             <thead>
               <tr>
                 <th class="col-8" scope="col">Картриджи HP</th>
@@ -127,7 +127,7 @@
             </tbody>
           </table>
           <!-- Таблица Xerox -->
-          <table class="table table-striped table-bordered rini_table mb-5">
+          <table class="table table-striped table-bordered rini_table_scroll mb-5">
             <thead>
               <tr>
                 <th class="col-8" scope="col">Картриджи Xerox</th>
@@ -158,7 +158,7 @@
             </tbody>
           </table>
           <!-- Таблица Samsung -->
-          <table class="table table-striped table-bordered rini_table mb-5">
+          <table class="table table-striped table-bordered rini_table_scroll mb-5">
             <thead>
               <tr>
                 <th class="col-8" scope="col">Картриджи Samsung</th>
@@ -189,7 +189,7 @@
             </tbody>
           </table>
           <!-- Картриджи Panasonic -->
-          <table class="table table-striped table-bordered rini_table mb-5">
+          <table class="table table-striped table-bordered rini_table_scroll mb-5">
             <thead>
               <tr>
                 <th class="col-8" scope="col">Картриджи Panasonic</th>
@@ -212,7 +212,7 @@
             </tbody>
           </table>
           <!-- Картриджи Kyocera -->
-          <table class="table table-striped table-bordered rini_table mb-5">
+          <table class="table table-striped table-bordered rini_table_scroll mb-5">
             <thead>
               <tr>
                 <th class="col-8" scope="col">Картриджи Kyocera</th>
@@ -231,7 +231,7 @@
             </tbody>
           </table>
           <!-- Картриджи OKI -->
-          <table class="table table-striped table-bordered rini_table mb-5">
+          <table class="table table-striped table-bordered rini_table_scroll mb-5">
             <thead>
               <tr>
                 <th class="col-8" scope="col">Картриджи OKI</th>
