--- a/contact.html
+++ b/contact.html
@@ -108,28 +108,15 @@
                         <p><img src="img/shema-3.jpg" alt="Схема-3"></p>
                         <strong>Из области на автомашине</strong>
                         <p><img src="img/shema-4.jpg" alt="Схема-4"></p>
-                        <p><strong>ICQ:</strong>6496449</p>
-                        <p><strong>Режим работы:</strong></p>
-                        <p>В рабочие дни ПнПт с 10-00 до 19-00 без обеда</p>
-                        <p>В выходные и праздничные дни с 12-00 до 16-00</p>
-                        <p><strong>Реквизиты:</strong></p>
-                        <p>ООО «РИНИ»</p>
-                        <p><strong>Юридический адрес:</strong>109316, г. Москва, Волгоградский проспект, д.28, стр.1</p>
-                        <p>ИНН/КПП 7722720473/772201001</p>
-                        <p>ОГРН 1107746496813</p>
-                        <p>Р/с 40702810400000080846</p>
-                        <p>К/с 30101810145250000411</p>
-                        <p>Бик 044525411</p>
-                        <p>Банк ФИЛИАЛ "ЦЕНТРАЛЬНЫЙ" БАНКА ВТБ (ПАО) г. Москва</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
-                <p><strong>Наличный расчет.</strong>Для физических и юридических лиц, желающих приобрести товар за наличные деньги  Вы можете оплатить заказ нашему курьеру при его получении или при самовывозе в нашем офисе. Доставка осуществляется в день заказа или на следующий день.</p>
-                <p><strong>Оплата банковскими картами.</strong>Для физических лиц возможна оплата в офисе банковскими картами VISA, MasterCard, МИР</p>
-                <p><strong>Безналичный расчет.</strong>Для юридических лиц, желающих оплатить товар безналичным переводом  после оформления заказа будет сформирован счет на оплату и отправлен Вам по факсу или электронной почте. Вместе с заказом при получении будут переданы все необходимые для бухгалтерии документы (оригинал счета на оплату, товарная накладная (акт — для услуг) и счетфактура). Доставка осуществляется в течении 3х рабочих дней после поступления денег на расчетный счет.</p>
+                <p><strong>Наличный расчет. </strong>Для физических и юридических лиц, желающих приобрести товар за наличные деньги  Вы можете оплатить заказ нашему курьеру при его получении или при самовывозе в нашем офисе. Доставка осуществляется в день заказа или на следующий день.</p>
+                <p><strong>Оплата банковскими картами. </strong>Для физических лиц возможна оплата в офисе банковскими картами VISA, MasterCard, МИР</p>
+                <p><strong>Безналичный расчет. </strong>Для юридических лиц, желающих оплатить товар безналичным переводом  после оформления заказа будет сформирован счет на оплату и отправлен Вам по факсу или электронной почте. Вместе с заказом при получении будут переданы все необходимые для бухгалтерии документы (оригинал счета на оплату, товарная накладная (акт — для услуг) и счетфактура). Доставка осуществляется в течении 3х рабочих дней после поступления денег на расчетный счет.</p>
               </div>
               <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
                 <p>Доставка по Москве в пределах МКАД расходных материалов от 1000 руб. (за исключением картриджей с Офисной Гарантией (ОГ)) в рабочие дни с понедельника по пятницу с 10-00 до 19-00 БЕСПЛАТНО.</p>
@@ -138,6 +125,21 @@
                 <p>Доставка за МКАД платная 100 руб. за 1 км.</p>
                 <p>Доставка по России осуществляется только по полной предоплате, наложенным платежом  отправка не производится. Если доставка осуществляется Почтой России, в счет  включаются почтовые расходы и стоимость доставки. Доставка до транспортной компании  — по выше перечисленным условиям.</p>
                 <p>Самовывоз производится только по адресу г. Москва, Волгоградский проспект, дом 28.  При самовывозе со склада действуют скидки на расходные материалы: на совместимую  продукцию 15%, на оригинальную продукцию 5%.</p>
+              </div>
+              <div>
+                <p><strong>ICQ: </strong>6496449</p>
+                <p><strong>Режим работы:</strong></p>
+                <p>В рабочие дни ПнПт с 10-00 до 19-00 без обеда</p>
+                <p>В выходные и праздничные дни с 12-00 до 16-00</p>
+                <p><strong>Реквизиты:</strong></p>
+                <p>ООО «РИНИ»</p>
+                <p><strong>Юридический адрес: </strong>109316, г. Москва, Волгоградский проспект, д.28, стр.1</p>
+                <p>ИНН/КПП 7722720473/772201001</p>
+                <p>ОГРН 1107746496813</p>
+                <p>Р/с 40702810400000080846</p>
+                <p>К/с 30101810145250000411</p>
+                <p>Бик 044525411</p>
+                <p>Банк ФИЛИАЛ "ЦЕНТРАЛЬНЫЙ" БАНКА ВТБ (ПАО) г. Москва</p>
               </div>
             </div>
           </div>
