--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <a class="navbar-brand" href="index.html">
         <img class="" src="img/rini-logo.png" alt="Логотип">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+  
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
@@ -38,7 +38,7 @@
             <a class="nav-link" href="office-equipment.html">Оргтехника</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="condition.html">Установка</a>
+              <a class="nav-link" href="condition.html">Установка</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="repair.html">Ремонт</a>
@@ -47,11 +47,12 @@
             <a class="nav-link" href="contact.html">Контакты</a>
           </li>
         </ul>
-        <form class="d-flex me-2 px-3" action="">
-          <input class="form-control" type="search" placeholder="Поиск">
-        </form>
-        <button class="btn btn-outline-secondary rini-btn">Найти</button>
       </div>
+        
+      <form class="d-flex me-2 my-2 form-search" action="">
+        <input class="form-control" type="search" placeholder="Поиск">
+        <button class="btn btn-outline-secondary rini-btn">Найти</button>
+      </form>
     </div>
   </nav>
 </header>
