--- a/test/test_BS5.html
+++ b/test/test_BS5.html
@@ -56,3 +56,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+
+<?php 
+wp_nav_menu( [
+  'theme_location' => 'bottom',
+  'container' => false,
+  'menu_class' => 'rini_footer',
+  'depth' => 2,
+  'menu_id' => '',
+  'fallback_cb' => 'WP_Bootstrap_Navwalker::fallback',
+  
+] );?>
